--- a/src/content/ideas/2025/gios-pr4/index.mdx
+++ b/src/content/ideas/2025/gios-pr4/index.mdx
@@ -7,7 +7,7 @@ type: 'project'
 tags: ['GIOS', 'operating-systems', 'c++', 'multithreading', 'RPC', 'distributed-systems']
 category: ['projects']
 draft: false
-audience: 'All'
+audience: 'Technical'
 media_subpath: "/ideas/gios-pr4/"
 image:
   path: "./distributed-pizza-server.jpeg"
@@ -34,12 +34,9 @@ import copyDownload from "./copy-download.png";
 
 The seamless sync of Google Drive feels like magic. I can edit a document on my laptop, and it instantly appears on my phone. This seamless synchronization feels effortless, but it's the result of a complex, carefully engineered **Distributed File System (DFS)**.
 
-A DFS is the backbone of modern cloud storage and collaboration. It allows multiple, geographically dispersed clients to access and modify a shared set of files as if they were stored on a single, local machine. For my final project in Georgia Tech's [CS 6200: Graduate Introduction to Operating Systems (GIOS)](https://omscs.gatech.edu/cs-6200-introduction-operating-systems), I was tasked with building one from the ground up in C++.
+A DFS is the backbone of modern cloud storage and collaboration. It allows multiple, geographically dispersed clients to access and modify a shared set of files as if they were stored on a single, local machine. For my final project in Georgia Tech's [CS 6200: Graduate Introduction to Operating Systems (GIOS)](https://omscs.gatech.edu/cs-6200-introduction-operating-systems), I built one from the ground up in C++.
 
-In the [first project](/ideas/2025/gios-pr1/), I built a simple file system with a single client and server. In the [second project](/ideas/2025/gios-pr3/), I extended it to add a proxy and cache server. This project is the final step in the journey, building a distributed file system with multiple clients and servers. This project was a fantastic 
-opportunity to tackle the challenges of distributed computing. This post 
-explores the key lessons from that journey, focusing on the three pillars of 
-any DFS: remote communication, data consistency, and synchronization.
+In the [first project](/ideas/2025/gios-pr1/), I built a simple file system with a single client and server. In the [second project](/ideas/2025/gios-pr3/), I extended it to add a proxy and cache server. This final project was a fantastic opportunity to tackle the challenges of distributed computing, and this post explores the key lessons from that journey, focusing on the three pillars of any DFS: remote communication, data consistency, and synchronization.
 
 > [!note]
 > This post is meant to be a showcase of the work I did on the project and the concepts I learned from it. For a broader overview of all concepts covered in the course, please see the companion post: [GIOS: A Retrospective](/ideas/2025/gios-retro/).
@@ -61,7 +58,7 @@ There are several ways to architect a DFS server infrastructure:
 - **Replication:** The simplest model is to have multiple servers, each holding a complete copy of every file. This provides high **fault tolerance** (if one server fails, others can take over) and **high availability** (requests can be balanced across any server).
 - **Partitioning:** In this model, the file set is split up, with each server holding only a subset of the files. This is incredibly **scalable**—if you need to store more files, you just add more servers. However, if a server holding a partition fails, that data becomes unavailable.
 
-In practice, many large-scale systems use a hybrid approach, partitioning the data into chunks and then replicating each chunk across multiple servers to get the benefits of both scalability and fault tolerance.
+In practice, many large-scale systems use a hybrid approach, partitioning the data into chunks and then replicating each chunk across multiple servers to get the benefits of both scalability and fault tolerance. For this project, focused on the client-server interaction model instead of the on server replication or partitioning.
 
 ### The Caching Compromise
 
@@ -251,7 +248,7 @@ One of the hardest problems in any distributed system is **consistency**. If Cli
 
 *   **Weak Consistency:** This model and its variants (like **Release Consistency**) offer the highest performance by minimizing communication. The tradeoff is that it provides no guarantees unless the programmer uses explicit **synchronization points** (like `acquire` and `release`). This shifts the burden of ensuring correctness entirely to the developer, making it the most difficult model to program against correctly.
 
-This project implemented a **weak consistency model** inspired by the **Andrew File System (AFS)**, which strikes a pragmatic balance. In this model:
+For this project, I implemented a **weak consistency model** inspired by the **Andrew File System (AFS)**, which strikes a pragmatic balance. In this model:
 - Clients aggressively **cache** copies of files locally for fast access.
 - When a client wants to *modify* a file, it must acquire a **write lock** from the server. This ensures only one client can write to a file at any given time, serializing writes and preventing the "lost update" anomaly.
 - When a client closes a modified file, it uploads the new version to the server. This "close" operation acts as a `release` synchronization point, making the client's updates available.
@@ -262,7 +259,7 @@ This "write-on-close" strategy provides an excellent trade-off for this type of 
 
 ## Synchronization in Action: `inotify` and Server Callbacks
 
-To make the system feel responsive, changes need to be propagated automatically. Waiting for a user to manually sync is not an option. This project used two key mechanisms for this.
+To make the system feel responsive, changes need to be propagated automatically. Waiting for a user to manually sync is not an option. For this project, I used two key mechanisms for this.
 
 1.  **Client-Side File Watcher:** The client used Linux's `inotify` API to monitor its local file directory. `inotify` is an event-driven mechanism that allows an application to be notified by the kernel whenever a file is created, modified, or deleted in a specific directory. This is far more efficient than constantly polling the directory to check for changes. When an event was detected, the client would automatically trigger the appropriate RPC to the server (e.g., `Store` for a modification).
 
@@ -272,7 +269,7 @@ This architecture also presented a significant client-side challenge: the `inoti
 
 ## Broader Implications and Applications
 
-The concepts explored in this project have real-world applications in:
+The concepts I explored in this project have real-world applications in:
 - **Cloud Storage Services** (e.g., Google Drive, Dropbox) where multiple users edit shared files.
 - **Distributed Databases** that replicate data across nodes while maintaining consistency.
 - **Big Data Processing** frameworks that distribute large files across multiple servers for analysis.
@@ -293,7 +290,7 @@ These books and guides were extremely helpful for understanding the concepts and
   url="https://www.manning.com/books/c-plus-plus-concurrency-in-action-second-edition"
 >
   <p>
-    A great book for understanding the concurrency features of C++.
+    An indispensable guide for writing robust concurrent and multithreaded applications in C++. It was essential for understanding the complexities of thread management and synchronization.
   </p>
 </BookCard>
 
@@ -304,7 +301,7 @@ These books and guides were extremely helpful for understanding the concepts and
   url="https://www.stroustrup.com/tour3.html"
 >
   <p>
-    A great book for understanding the features of C++.
+    A high-level tour of modern C++ features from the language's creator. Perfect for getting a broad overview of the language's capabilities and best practices.
   </p>
 </BookCard>
 
