Add updated dates and MSCS post

--- a/src/content/ideas/2025/gios-pr3/index.mdx
+++ b/src/content/ideas/2025/gios-pr3/index.mdx
@@ -2,6 +2,7 @@
 title: 'IPC in Action: Building a High-Performance Proxy & Cache'
 description: 'A dive into a project that explores IPC and synchronization in C'
 date: '2025-07-10'
+updated: '2025-07-22'
 status: 'complete'
 type: 'project'
 tags: ['GIOS', 'operating-systems', 'c', 'IPC', 'socket-programming']
