--- a/src/content/ideas/2025/gios-pr4/index.mdx
+++ b/src/content/ideas/2025/gios-pr4/index.mdx
@@ -2,7 +2,7 @@
 title: 'Syncing Up: Building a Distributed File System in C++'
 description: 'A deep dive into the challenges of remote communication and data consistency, inspired by systems like Google Drive.'
 date: '2025-07-22'
-status: 'in-progress'
+status: 'complete'
 type: 'project'
 tags: ['GIOS', 'operating-systems', 'c++', 'multithreading', 'RPC', 'distributed-systems']
 category: ['projects']
