--- a/src/content/ideas/2025/mscs/index.mdx
+++ b/src/content/ideas/2025/mscs/index.mdx
@@ -1,7 +1,8 @@
 ---
 title: 'Master of Science in Computer Science'
-description: 'My academic journey at Georgia Tech'
+description: "From biomedical engineering to machine learning: my journey through Georgia Tech's MSCS program"
 date: '2025-06-20'
+updated: '2025-07-22'
 status: 'in-progress'
 type: 'retro'
 tags: ['MSCS', 'machine-learning', 'python']
@@ -16,47 +17,41 @@ hideCaption: true
 ---
 
 
-I started my Master of Science in Computer Science (MSCS) journey at Georgia Tech in Spring 2024. In undergrad I studied Biomedical Engineering.
+In Spring 2024, I embarked on a new chapter: pursuing a Master of Science in Computer Science (MSCS) at Georgia Tech. This might seem like a natural step for a software engineer, but my path has been anything but conventional. My undergraduate degree is in Biomedical Engineering, a field that, at first glance, seems worlds away from kernels and compilers.
 
-My initial motivation started with the release of [Alpha Fold](https://en.wikipedia.org/wiki/AlphaFold) in 2018. This kicked off two major threads for me.
+My motivation to return to academia was sparked in 2018 with the release of [AlphaFold](https://en.wikipedia.org/wiki/AlphaFold). As a professional developer since 2014, I had built everything from small web apps to large-scale distributed systems. Yet, AlphaFold's success crystallized two things for me: first, machine learning was poised to revolutionize science in ways I hadn't imagined, and second, my day-to-day work wasn't giving me the depth I craved to be a part of that revolution. I realized that to truly understand and contribute to the field, I needed the kind of rigorous, foundational knowledge that only an academic program could provide.
 
-1. It was clear that the field of machine learning had broad implications for science beyond just building better computer systems. 
-2. My current work as an application developer was not providing me with the opportunity to learn about the field.
+## My Coursework
 
-I started programming full-time in 2014. I've been working in the field ever since. I've worked on a variety of projects, from small web apps to large scale distributed systems. I've also worked on a variety of languages, from C to Python to JavaScript.
+My plan is to tailor my studies around two specializations: Machine Learning and High-Performance Computing. Here's a look at my journey through the curriculum. I'll link out to more detailed posts on each course and project as I complete them.
 
-Machine learning is field that benefits from academic rigor.
-
-## Coursework
-
-My plan is to write a post for each course I take. I'll link to the posts here as I write them.
-
-- Spring 2024
+🌱 Spring 2024:
   - [CS 6200: Graduate Introduction to Operating Systems (GIOS)](/ideas/2025/gios-retro/)
     - [Project 1: Simple File System](/ideas/2025/gios-pr1/)
     - There was no project 2 the semester I took it.
-    - [Project 2: Proxy and Cache](/ideas/2025/gios-pr3/)
+    - [Project 3: Proxy and Cache](/ideas/2025/gios-pr3/)
     - [Project 4: Distributed File System](/ideas/2025/gios-pr4/)
 
-- Summer 2024
-  - I quit my job and traveled to Europe for 3 months
+🌻 Summer 2024:
 
-- Fall 2024
+After a demanding first semester, I took a three-month sabbatical to travel through Europe, returning refreshed and ready for the next challenge.
+
+🍂 Fall 2024:
   - CS 7641: Machine Learning (ML)
   - CS 6290: High Performance Computer Architecture (HPCA)
 
-- Spring 2025
+🌱 Spring 2025:
   - CS 7643: Deep Learning (DL)
   - CS 6210: Advanced Operating Systems (AOS)
 
-- Summer 2025 (currently taking)
+🌻 Summer 2025 (currently taking):
   - ISYE 6525: High-Dimensional Data Analysis (HDDA)
 
-- Fall 2025 (enrolled)
+🍂 Fall 2025 (enrolled):
   - CS 7642: Reinforcement Learning (RL)
   - CS 8803 O21: GPU Hardware and Software (GPU)
 
-- Spring 2026 (planned)
+🌱 Spring 2026 (planned):
   - ISYE 6420: Bayesian Statistics (Bayes)
   - CS 6515: Intro to Graduate Algorithms (GA)
 
