Add updated first draft with books

--- a/src/content/ideas/2025/gios-retro/index.mdx
+++ b/src/content/ideas/2025/gios-retro/index.mdx
@@ -491,14 +491,12 @@ These cloud services are made possible by many of the technologies discussed thr
 
 The projects were a great way to solidify the concepts learned in the course and took up a significant portion of the time I spent on the course. The average on [OMSCS Central](https://www.omscentral.com/courses/graduate-introduction-to-operating-systems/reviews) across all of the student reviews was 18.5 hours per week. I averaged a bit more than that, particularly on the first project, because of my lack of C and C++ experience. There were a few weeks when I hammered out the projects where I spent closer to 40 hours in a week. Once I got the projects done, I was able to focus on the lectures and readings which took up less time.
 
-I'm writing follow-up posts for each project to explore them in more detail. Here is the first one:
+I wrote deeper dives on each of the projects:
 
 - **Project 1:** [Concurrent File Server](/ideas/2025/gios-pr1/)
 - (project 2 was omitted in my iteration of the course)
 - **Project 3:** [Cache & Proxy Servers with Shared Memory IPC](/ideas/2025/gios-pr3/)
 - **Project 4:** [GRPC and Distributed Systems](/ideas/2025/gios-pr4/)
-
-I'll update this list as I write about the other projects.
 
 ### Grading
 
